--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -186,3 +186,28 @@
     flex-direction: column;
   }
 }
+
+
+.nav ul {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 5em;
+}
+
+.nav li {
+  flex: 1;
+  padding: 1em 0;
+  max-width: 10em;
+  list-style: none;
+  text-align: center;
+  background: #030152;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.nav a {
+  color: white;
+}
