--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,7 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  height: 100%;
 }
 
 .examplesContainer {
@@ -211,3 +208,4 @@
 .nav a {
   color: white;
 }
+
